--- a/package.json
+++ b/package.json
@@ -1,4 +1,26 @@
 {
-  "name": "ts-mails",
-  "packageManager": "yarn@4.9.2"
+  "name": "teamsystems-mails",
+  "license": "MIT",
+  "scripts": {
+    "build": "tsc",
+    "dev": "yarn build && node dist/index.js",
+    "package": "yarn build && pkg . --targets node18-win-x64,node18-macos-x64,node18-linux-x64 --out-path bin",
+    "lint": "eslint src --ext .ts",
+    "format": "prettier --write \"src/**/*.ts\""
+  },
+  "devDependencies": {
+    "@types/node": "^24.0.13",
+    "@typescript-eslint/eslint-plugin": "^8.36.0",
+    "@typescript-eslint/parser": "^8.36.0",
+    "eslint": "^9.30.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1",
+    "exceljs": "^4.4.0",
+    "pkg": "^5.8.1",
+    "prettier": "^3.6.2",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.36.0"
+  },
+  "packageManager": "yarn@4.9.2",
+  "bin": "dist/index.js"
 }
