--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "typescript-eslint": "^8.36.0"
   },
   "packageManager": "yarn@4.9.2",
-  "bin": "dist/index.js"
+  "bin": "dist/index.js",
+  "dependencies": {
+    "@types/xlsx": "^0.0.35",
+    "xlsx": "^0.18.5"
+  }
 }
